
2023-05-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_resolve_redefines): fix #881 wrong REDEFINES error on
	  fields with redefinition

2023-04-25  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_so_load_version_check): new function to generate
	  libcob version check in shared object constructor / DllMain, allowing
	  better error messages if the generated COBOL functions cannot be loaded
	  into memory because of newer ABI

2023-04-18  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_move_field): emit call to cob_move_bcd for two
	  BCD fields without negative scale

2023-04-17  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l: dropped last_token_is_dot and integer_is_label by checking
	  last_token instead
	* scanner.l, parser.y, reserved.c, tree.h: dropped cobc_force_literal by
	  introducing second_last_token and checking the tokens instead
	* scanner.l: early consume spaces after comma and semicolon
	* scanner.l: simplify check for redundant periods by splitting its rule
	* cobc.c (file_basename): directly use filename,
	  only handle backslash on win32
	* codegen.c: minor refactoring to drop global string_buffer
	* codegen.c: generate COB_EXT_IMPORT and COB_EXT_EXPORT instead of extern
	* codegen.c (codegen): minor refactoring
	* parser.y (setup_registers): extracted
	* parser.y: minor refactoring

2023-04-14  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppopen_get_file): extracted from ppopen and minor refactor
	* pplex.l (ppecho): disabled performance-dropping fflush until found
	  necessary

2023-04-11  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond, cb_emit_divide, cb_build_move_literal):
	  minor refactoring

2023-04-04  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_build_picture): don't include leading Ps in digit count
	* typeck.c (validate_move): adjust checks for move from literal, fixing
	  PPP edge cases; rewrote calculation for most and least significant places
