@@ -6369,7 +6369,8 @@ cb_build_funcall (const char *name, const int argc,
 		  const cb_tree a1, const cb_tree a2, const cb_tree a3,
 		  const cb_tree a4, const cb_tree a5, const cb_tree a6,
 		  const cb_tree a7, const cb_tree a8, const cb_tree a9,
-		  const cb_tree a10, const cb_tree a11)
+		  const cb_tree a10, const cb_tree a11, const cb_tree a12,
+		  const cb_tree a13, const cb_tree a14)
 {
 	struct cb_funcall *p;
 
@@ -6390,6 +6391,9 @@ cb_build_funcall (const char *name, const int argc,
 	p->argv[8] = a9;
 	p->argv[9] = a10;
 	p->argv[10] = a11;
+	p->argv[11] = a12;
+	p->argv[12] = a13;
+	p->argv[13] = a14;
 	return CB_TREE (p);
 }
 
